# api/controllers/products.js
@@ -6,6 +6,7 @@ module.exports = {
     deleteProduct: deleteProduct,
     getProducts: getProducts,
     findProduct: findProduct,
+    placeOrder: placeOrder
 };
 
 function createProduct(req, res) {
@@ -23,12 +24,28 @@ function createProduct(req, res) {
     }
   }
   
+function placeOrder(req, res){
+    try {
+        var d = new Date();
+        var Order = {
+            username : req.body.username,
+            product : req.body.product,
+            date : d
+        };
+        console.log("Order", Order)
+        var x = db.createObject('products', Order);
+        return res.json(x._id);
+    } catch (error) {
+        return res.send(400, {
+            message: error.message
+        });
+    }
+    
+}
+  
 function deleteProduct(req, res) {
     try {
-        var Product = {
-            name: req.body.name,
-            cost: req.body.cost
-        };
+        
         db.deleteObject('products', product);
         var x = db.getObjects('products');
         return res.json(x);
